# IntegrityWatch

./: .gitignore  README.md  install.bat  pyproject.toml
.github/workflows/: build_wheels.yml
src/: config.py  main.py
src/browser_monitor/: main.py
src/browser_monitor/core/: engine.py  install.py  native_host.py  result.py
src/browser_monitor/detectors/: base.py  dom_manipulation.py  screen_share.py  tab_switching.py
src/browser_monitor/extension/: background.js  content.js  leetcode_monitor.js  manifest.json
src/core/: report.py
src/integritywatch/: cli.py  main.py
src/integritywatch/browser_monitor/: main.py
src/integritywatch/browser_monitor/core/: engine.py  install.py  native_host.py  result.py
src/integritywatch/browser_monitor/detectors/: base.py  malicious_extension.py  tab_switching.py
src/integritywatch/browser_monitor/extension/: background.js  content.js  leetcode_monitor.js  manifest.json
src/integritywatch/core/: report.py
src/integritywatch/remote_access/: constants.py  main.py
src/integritywatch/remote_access/core/: engine.py  result.py
src/integritywatch/remote_access/detectors/: base.py
src/integritywatch/remote_access/detectors/process_detector/: process_detection.py
src/integritywatch/remote_access/detectors/rdp_session/: rdp_session.py
src/integritywatch/utils/: browser.py  logger.py
src/integritywatch/utils/platform/: linux.py  macos.py  windows.py
src/integritywatch/vm_detector/core/: engine.py  result.py
src/integritywatch/vm_detector/detectors/: base.py
src/integritywatch/vm_detector/detectors/hardware/cpu/: hypervisor_bit.py  vmid.py
src/integritywatch/vm_detector/detectors/hardware/firmware/: kernel_objects.py  pci_devices.py  smbios_tables.py
src/integritywatch/vm_detector/detectors/hardware/network/: mac_address.py
src/integritywatch/vm_detector/detectors/sandbox/: virtual_registry.py
src/remote_access/: constants.py  main.py
src/remote_access/core/: engine.py  result.py
src/remote_access/detectors/: base.py  rdp_session.py
src/remote_access/detectors/process_detector/: process_detection.py
src/remote_access/detectors/rdp_session/: rdp_session.py
src/utils/: colors.py  logger.py
src/utils/platform/: base.py  linux.py  macos.py  windows.py
src/vm_detector/: main.py
src/vm_detector/core/: engine.py  logger.py  result.py
src/vm_detector/detectors/: base.py
src/vm_detector/detectors/hardware/cpu/: hypervisor_bit.py  vmid.py
src/vm_detector/detectors/hardware/firmware/: kernel_objects.py  pci_devices.py  smbios_tables.py
src/vm_detector/detectors/hardware/network/: mac_address.py
src/vm_detector/detectors/sandbox/: virtual_registry.py
src/vm_detector/platform/: base.py  linux.py  windows.py
wheels/: cpuid-0.1.1-py3-none-any.whl  cpuid_native-0.1.1-cp311-cp311-win_amd64.whl  cpuid_native-0.1.1-cp312-cp312-win_amd64.whl  cpuid_native-0.1.1-cp313-cp313-win_amd64.whl
