[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "integritywatch"
version = "0.1.0"
description = "Exam proctoring system with VM and browser monitoring"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}

authors = [
  { name = "Devesh Bhushan", email = "deveshbhushan7@gmail.com" }
]

dependencies = [
    "colorama",
    "wmi; sys_platform == 'win32'",
    "cpuid; sys_platform != 'win32' and (platform_machine == 'x86_64' or platform_machine == 'AMD64')"
]

[project.optional-dependencies]
windows = [
    "cpuid==0.1.1 ; sys_platform=='win32'",
    "cpuid-native==0.1.1 ; sys_platform=='win32'",
]

[tool.setuptools]
include-package-data = true

[project.scripts]
integritywatch = "integritywatch.cli:main_wrapper"
integritywatch-install-extension = "integritywatch.cli:install_wrapper"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"integritywatch.browser_monitor.extension" = ["**/*"]
"integritywatch" = ["../wheels/*.whl"]
"*" = ["wheels/*.whl"]
